Fix Q&A on mobile

--- a/assets/css/style-new.css
+++ b/assets/css/style-new.css
@@ -675,13 +675,20 @@ footer {
   }
 
   .faq-list {
-    font-size: 2.5rem;
+    font-size: 3rem;
     padding: 0;
   }
 
   .faq-question i {
-    font-size: 2.5rem;
+    font-size: 3rem;
     line-height: 2.5rem;
+  }
+
+  #faq-container {
+    padding: 0px;
+    margin: 0px auto 0px auto;
+    width: 85%;
+    max-width: 100%;
   }
 
   #contact {
